--- a/Mods/BetterRanching/config.json
+++ b/Mods/BetterRanching/config.json
@@ -4,5 +4,5 @@
   "DisplayProduce": true,
   "DisplayFarmAnimalHearts": true,
   "DisplayPetHearts": true,
-  "HideHeartsWhenFriendshipIsMax": false
+  "HideHeartsWhenFriendshipIsMax": true
 }
